add_library(DRIVER_LIB_HDR INTERFACE)
set_property(TARGET DRIVER_LIB_HDR
    PROPERTY INTERFACE_INCLUDE_DIRECTORIES
    ${CMAKE_CURRENT_LIST_DIR}/include
    ${CMAKE_SOURCE_DIR}/user
    )

file(GLOB DRIVER_LIB_SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/driver/*.c
)

add_library(driver_lib STATIC
    ${DRIVER_LIB_SRC}
)

target_include_directories(driver_lib PRIVATE
    $<TARGET_PROPERTY:ESP8266_SDK,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:DRIVER_LIB_HDR,INTERFACE_INCLUDE_DIRECTORIES>
    )

